--- a/package.json
+++ b/package.json
@@ -1,23 +1,13 @@
 {
   "name": "simplezas",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npm install",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"No test specified\" && exit 0"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Carmen-Rohr/simplezas.git"
-  },
-  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Carmen-Rohr/simplezas/issues"
-  },
-  "homepage": "https://github.com/Carmen-Rohr/simplezas#readme",
-  "description": "",
   "dependencies": {
     "axios": "^1.10.0"
   }
